fix issue where scroll bar would look funky behind the prompt

--- a/gui/components/chat/ChatWindow/styles.module.css
+++ b/gui/components/chat/ChatWindow/styles.module.css
@@ -1,14 +1,26 @@
-.root {
-  max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.message_feed {
+.message_feed_container {
   height: 90vh;
   overflow-y: scroll;
   width: 100%;
   padding-bottom: 40vh;
+}
+
+.message_feed {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+}
+
+.prompt_container {
+  width: 100%;
+  height: 1vh;
+}
+
+.prompt_inner_container {
+  width: 100%;
+  max-width: 790px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .prompt {
